<resources>
    <string name="app_name">anki image app</string>
    <string name="action_create">Update</string>
    <string name="title_activity_card">Image Card</string>
    <string name="add_card">Get images</string>
    <string name="appendix">Appendix</string>
    <string name="images">Images</string>
    <string name="failed_add_card">Failed to update card</string>
    <string name="card_updated">Card has been updated</string>
    <string name="permissions_needed">Permissions required</string>
    <string name="permissions_needed_long">Ankidroid permissions and storage permissions are needed to work, please download from app store and grant requested rights.</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_downloading">there was an error downloading</string>
    <string name="deck_name">Deck name</string>
    <string name="model_name">Model name</string>
    <string name="refresh">Refresh</string>
    <string name="empty_image_cards">Empty Images</string>
    <string name="marked_cards">Marked Cards</string>
    <string name="failed_change_tag">Failed to update the tags</string>
    <string name="tag_updated">Updated the tags</string>
    <string name="auto_cards">Auto gen cards</string>
    <string name="clear_save">Clear cache</string>
    <string name="storage_needed">Storage permissions are needed for this app</string>
    <string name="erase_data_title">Erasing local data</string>
    <string name="erase_data_long">Are you sure you want to erase all saved lists? (this will force an re-check</string>
    <string name="action_create_no_image">No Image</string>
</resources>